--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "logiqids-clone",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "jszip": "^3.10.1",
-    "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.6.3"
+    "react-router-dom": "^7.6.3",
+    "lucide-react": "^0.344.0",
+    "framer-motion": "^11.0.0",
+    "react-confetti": "^6.1.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
